fix bgcolor contrast

--- a/shell/styles/index.css
+++ b/shell/styles/index.css
@@ -1,7 +1,7 @@
 html,
 body {
   color: #fff;
-  background-color: #111;
+  background-color: #252830;
   font-family: sans-serif;
 }
 
